# PathPlanningComp

./: CMakeLists.txt  CMakePresets.json  MyJourney.odp  PathPlanning.cpp  PathPlanning.h  README.md  readme.txt  vcpkg_rf.txt
Algorithms/: sample_algo.cpp
Algorithms/My Codes/Environments/PathPlannerComp2_0/: CMakeLists.txt  PathPlannerComp2_0.cpp  PathPlannerComp2_0.h  vcpkg_rf.txt
Algorithms/My Codes/Environments/PathPlannerComp2_0/Algorithms/: main_algo.cpp
Algorithms/My Codes/Environments/PathPlannerComp2_0/Header Files/: RenderClass.h  constants.h  elliptical_approx.h  global_variables.h  mcc.h  pre_built_algo.h
Algorithms/My Codes/Environments/PathPlannerComp2_0/Header Files/Algorithms/: a_star.h  genetic.h  voronoi.h
Algorithms/My Codes/Environments/PathPlannerComp2_0/Source Files/: Main.cpp  Map2D.cpp  RenderClass.cpp  VAO.cpp  VBO.cpp  elliptical_approx.cpp  mcc.cpp  pre_built_algo.cpp  shaderClass.cpp
Algorithms/My Codes/Environments/PathPlannerComp2_0/Source Files/Algorithms/: voronoi.cpp
Algorithms/My Codes/Environments/openGLenv/: EBO.h  Map2D.cpp  Map2D.h  RenderClass.cpp  RenderClass.h  VAO.cpp  VAO.h  a_star.cpp  a_star.h  constants.h  elliptical_approx.cpp  elliptical_approx.h  genetic.cpp  genetic.h  glad.cpp  minimilistic_search.cpp  openGLenv.sln  openGLenv.vcxproj  openGLenv.vcxproj.filters  voronoi.cpp  voronoi.h
Algorithms/My Codes/Environments/openGLenv/Libraries/include/glad/: glad.h
Algorithms/Tutorials/One Lone Coder/: OneLoneCoder_PathFinding_AStar.cpp
Algorithms/Tutorials/freeCodeCamp/openGLenv/: Main.cpp  openGLenv.vcxproj  openGLenv.vcxproj.filters
Algorithms/Tutorials/freeCodeCamp/openGLenv/Libraries/lib/: glfw3.lib
Header Files/: Map2D.h  RenderClass.h  VBO.h  constants.h  shaderClass.h
Header Files/Algorithms/: voronoi.h
Research Papers/: Links.txt
Source Files/: EBO.cpp  Map2D.cpp  RenderClass.cpp  elliptical_approx.cpp  mcc.cpp
Source Files/Algorithms/: a_star.cpp  genetic.cpp
Submission/: .~lock.ME18B074_Mid_Tem_Review.docx#  ME18B074_Mid_Tem_Review.docx  ME18B074_Mid_Tem_Review_v1.docx  ME18B074_Mid_Tem_Review_v2.docx  ME18B074_Mid_Tem_Review_v3.docx  ME18B074_Mid_Tem_Review_v4.docx  ME18B074_Mid_Tem_Review_v5.docx  ME18B074_Mid_Term_Review_ppt.pptx  ME18B074_fINAL_Review_ppt.pptx
Submission/results/: logfile.txt  results.xlsx
